2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in:
	Patch from Shaun McCance to add schemas for document
	font setting. Closes bug #160453

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix build on ia64. Patch from Sebastien
	Bacher. Closes bug #148996.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in: Use
	the correct key name for both-horiz. Patch from
	Christian Neumair. Closes bug #145004.

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c: Add #include <strings.h>
	* monikers/bonobo-config-bag.c: Make a function static

2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c:
	Pass the GNOME_PARAM_HUMAN_READABLE_NAME property
	to g_set_application_name(). Fixes bug #109238.
	Patch from Muktha Narayan <muktha narayan at wipro com>

2005-04-29  Tor Lillqvist  <tml@novell.com>

	* libgnome/gnome-util.c (gnome_win32_locale_filename_from_utf8):
	New function. Lifted from HEAD GLib. If GLib 2.8 is released
	before libgnome gets more widely deployed on Windows, this can be
	dropped and use g_win32_locale_filename_from_utf8() directly
	instead.

	* libgnome/gnome-util.h: Declare it. On GLib 2.7 and later,
	just redirect to g_win32_locale_filename_from_utf8().

2005-04-18  Tor Lillqvist  <tml@novell.com>

	* libgnome/Makefile.am: Remove unused LIBGNOME_BINDIR.

	Rework the Win32 run-time path lookup system once more. Use
	functions instead of global variables. Make DllMain() minimalistic
	as is recommended.

	* libgnome/dllmain.c (DllMain): Now very minimal, as is the
	recommended practise. Just store the DLL handle. Don't call GLib
	functions.
	(gnome_win32_get_prefixes): New public function to be used by
	other GNOME libraries, too. Takes a HMODULE and returns the
	installation prefix both in a full UTF-8 form and in a system
	codepage form. This should probably be in GLib, but GNOME's