@@ -249,5 +249,16 @@
 	"gtk+".</long>
       </locale>
     </schema>
+    <schema>
+      <key>/schemas/desktop/gnome/interface/menubar_accel</key>
+      <applyto>/desktop/gnome/interface/menubar_accel</applyto>
+      <owner>gnome</owner>
+      <type>string</type>
+      <default>F10</default>
+      <locale name="C">
+	<short>Menubar accelerator</short>
+	<long>Keyboard shortcut to open the menu bars.</long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
