@@ -1,3 +1,8 @@
+2005-01-02  Sebastien Bacher  <seb128@debian.org>
+
+	* schemas/desktop_gnome_interface.schemas.in: added a gconf key to 
+	configure the gtk-menu-bar-accelerator.
+
 2005-05-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* schemas/desktop_gnome_interface.schemas.in:
